# convoscrape

./: .gitignore  README.md  pyproject.toml
configs/: turkey.yaml
convoscrape/: cli.py  convoutils.py  pipelines.py  scrape.py  utils.py  websvc.py
notebooks/: exploration.ipynb
