[tool.poetry]
name = "convoscrape"
version = "0.1.0"
description = "Tool to build conversation corpora from scraping social networks"
authors = ["Vasanth Sarathy <vsarathy@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
cscrape = 'convoscrape.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.5.3"
jupyter = "^1.0.0"
ipykernel = "^6.21.3"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
snscrape = "^0.6.1"
convokit = "^2.5.3"
ndjson = "^0.3.1"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
